--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web",
+  "name": "maplibre-gl-ts",
   "version": "1.0.0",
   "description": "Source code for web application",
   "private": true,
